--- a/app/views/checkout/complete.hbs
+++ b/app/views/checkout/complete.hbs
@@ -18,3 +18,7 @@
   <h3>{{order.billing.address.nickname}}</h3>
   <p>{{order.billing.address.displayAddress}}</p>
 </div>
+<div class="order-container">
+  <h2>Order</h2>
+  {{> order_table order}}
+</div>
