--- a/app/views/user/profile.hbs
+++ b/app/views/user/profile.hbs
@@ -5,7 +5,8 @@
   <input type="submit" value="Change Email"/>
 </form>
 <ul>
-  <li><a href="/user/change_password">Change Password</a></li>
+  <li><a href="/user/password/change">Change Password</a></li>
   <li><a href="/user/addresses">View Addresses</a></li>
+  <li><a href="/user/payment_methods">View Payment Methods</a></li>
   <li><a href="/user/orders">View Orders</a></li>
 </ul>
