--- a/app/views/checkout/shipping.hbs
+++ b/app/views/checkout/shipping.hbs
@@ -2,22 +2,22 @@
 <div class="shipping-container">
   <h2>Choose a shipping address</h2>
   {{#if addresses}}
-  <h3>Your saved addresses</h3>
+    <h3>Your saved addresses</h3>
   {{/if}}
   <form method="POST" action="" class="ak-form">
     <input type="hidden" name="order_id" value="{{order_id}}"/>
     {{#each addresses}}
       <input type="radio" name="address_id" value="{{this.id}}"
-        {{#unless default_address_id}}
+        {{#unless ../default_address_id}}
           {{#if @first}}checked{{/if}}
         {{/unless}}
-        {{#ifCond default_address_id '==' this.id}}checked{{/ifCond}}
+        {{#ifCond ../default_address_id '==' this.id}}checked{{/ifCond}}
       />
       <label for="address_id">{{this.displayAddress}}</label>
       <button>Edit</button>
     {{/each}}
     {{#if addresses}}
-    <h3>- OR -</h3>
+      <h3>- OR -</h3>
     {{/if}}
     <input type="radio" id="new_address_radio" name="address_id" value="new" {{#unless addresses}}checked{{/unless}}/>
     <label for="address_id">Ship to a new address</label>
@@ -32,7 +32,7 @@
       <input type="text" name="zip_code" placeholder="Zip Code"/>
       <input type="text" name="country" placeholder="Country"/>
       {{#if user}}
-        <label for="default_address">Set as default shipping address?</label>
+        <label for="default_address">Save as default shipping address?</label>
         <input type="checkbox" name="set_default_address"/>
       {{/if}}
     </div>
