--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,15 +24,142 @@
 .ak-hidden {
   display: none;
 }
+.ak-disabled {
+  pointer-events: none;
+  color: gray;
+}
 .ak-border {
   border: 1px solid black;
 }
+.ak-center {
+  margin: 0 auto;
+}
+.ak-inline {
+  display: inline;
+}
+.ak-inline-block {
+  display: inline-block;
+}
 .ak-ul {
   list-style-type: none;
+  text-align: left;
 }
+
 .ak-form > input {
   display: block;
 }
+
 .ak-inactive {
   opacity: .4;
+}
+
+.product-images-container {
+  width: 400px;
+  height: 400px;
+}
+
+.thumbnail-images-container {
+  float: left;
+  width: 20%;
+  height: 100%;
+}
+
+.thumbnail-images-container > img {
+  width: 100%;
+  height: 25%;
+  padding: 5% 0;
+  cursor: pointer;
+}
+
+.large-image-container {
+  float: right;
+  width: 80%;
+  height: 80%;
+}
+
+.large-image-container > img {
+  width: 100%;
+  height: auto;
+}
+
+.variant-images-container {
+  display: block;
+  margin: 20px 0 20px 20%;
+  width: 80%;
+  height: 64px;
+  padding: 10px;
+  overflow-x: scroll;
+  overflow-y: none;
+}
+
+.variant-thumbnail {
+  float: left;
+  width: 64px;
+  height: 64px;
+  cursor: pointer;
+  padding: 0 15px;
+}
+
+.variant-thumbnail > img {
+  width: 100%;
+  height: 100%;
+}
+
+.remove-image-btn {
+  position: absolute;
+  margin: -110px 20px;
+  color: red;
+  outline: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.remove-variant-btn {
+  position: absolute;
+  margin: -80px 20px;
+  color: red;
+  outline: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.edit-variant-btn {
+  position: absolute;
+  margin: -80px -40px;
+  color: blue;
+  outline: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.admin-product-controls {
+  width: 200px;
+}
+
+.cart-btn {
+  margin: 0 40px;
+  background-color: #dc4300;
+  color: #F9F9F9;
+}
+
+.product-container {
+  width: 400px;
+  text-align: center;
+  display: inline-block;
+}
+
+.product-title {
+  margin: 20px auto;
+}
+
+.variant-card {
+  width: 400px;
+  margin: 0 auto;
+  text-align: center;
 }
