--- a/app/views/partials/order_table.hbs
+++ b/app/views/partials/order_table.hbs
@@ -25,8 +25,9 @@
       <td>{{this.status}}</td>
       <td>{{fmt_date this.date_created}}</td>
       <td><a href="/user/addresses">{{this.shipping.address.id}}</a></td>
-      <td><a href="/user/orders/{{this.id}}?change_shipping=1" {{#ifCond status '!=' 'paid'}}class="ak-disabled"{{/ifCond}}>Change Shipping</a></td>
+      <td>{{#if this.user}}<a href="/user/orders/{{this.id}}?change_shipping=1" {{#ifCond status '!=' 'paid'}}class="ak-disabled"{{/ifCond}}>Change Shipping</a>{{/if}}</td>
       <td>
+        {{#if this.user}}
         {{#ifCond this.status '==' 'paid'}}
           <a href="/user/orders/{{this.id}}/cancel">Cancel Order</a>
         {{else}}
@@ -34,6 +35,7 @@
             {{#ifCond this.status '!=' 'shipped'}}{{#ifCond this.status '!=' 'delivered'}}{{#ifCond this.status '!=' 'expecting_return'}}class="ak-disabled"{{/ifCond}}{{/ifCond}}{{/ifCond}}
           >Request a Return</a>
         {{/ifCond}}
+        {{/if}}
       </td>
     </tr>
   {{else}}
@@ -48,8 +50,9 @@
       <td>{{status}}</td>
       <td>{{fmt_date date_created}}</td>
       <td><a href="/user/addresses">{{this.shipping.address.id}}</a></td>
-      <td><a href="/user/orders/{{id}}?change_shipping=1" {{#ifCond status '!=' 'paid'}}class="ak-disabled"{{/ifCond}}>Change Shipping</a></td>
+      <td>{{#if user}}<a href="/user/orders/{{id}}?change_shipping=1" {{#ifCond status '!=' 'paid'}}class="ak-disabled"{{/ifCond}}>Change Shipping</a>{{/if}}</td>
       <td>
+        {{#if user}}
         {{#ifCond status '==' 'paid'}}
           <a href="/user/orders/{{id}}/cancel">Cancel Order</a>
         {{else}}
@@ -57,6 +60,7 @@
             {{#ifCond status '!=' 'shipped'}}{{#ifCond status '!=' 'delivered'}}{{#ifCond status '!=' 'expecting_return'}}class="ak-disabled"{{/ifCond}}{{/ifCond}}{{/ifCond}}
           >Request a Return</a>
         {{/ifCond}}
+        {{/if}}
       </td>
     </tr>
   {{/each}}
